third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-nightly/transmute-dst-not-frombytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-dst-not-frombytes.rs:19:41
   |
19 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^
   |                                         |
   |                                         the trait `zerocopy::FromBytes` is not implemented for `NotZerocopy`
   |                                         required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(FromBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::FromBytes`:
             ()
             AU16
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
           and $N others
note: required by a bound in `AssertIsFromBytes`
  --> tests/ui-nightly/transmute-dst-not-frombytes.rs:19:41
   |
19 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsFromBytes`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
